Name:                unreal-k
Version:             0.1
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

executable unreal-k
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4 && < 5,
    mtl                        == 2.0.1.0,
    acid-state                 == 0.8.1,
    safecopy                   == 0.7.2,
    containers                 == 0.4.2.1,
    network                    == 2.3.0.10,
    filepath    >= 1    && < 2,
    http-server >= 0.2  && < 2,
    json        >= 0.4  && < 1,
    url         >= 2.1  && < 3,
    utf8-string >= 0.3  && < 1,
    xhtml       >= 3000 && < 3001

  ghc-options: -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -fno-warn-orphans

  default-extensions: DeriveDataTypeable,
                      ScopedTypeVariables,
                      TemplateHaskell,
                      TypeFamilies
