Name:                unreal-k
Version:             0.1
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

executable unreal-k
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4 && < 5,
    acid-state                 == 0.8.1,
    aeson                      == 0.6.0.2,
    async                      == 2.0.1.4,
    bytestring                 == 0.9.2.1,
    containers                 == 0.4.2.1,
    http-server                == 1.0.1,
    mtl                        == 2.0.1.0,
    network                    == 2.3.0.10,
    safecopy                   == 0.7.2,
    unix-time                  == 0.1.2,
    url                        == 2.1.3

  ghc-options: -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -fno-warn-orphans

  default-extensions: DeriveDataTypeable,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell,
                      TypeFamilies,
                      TypeSynonymInstances
