Name:                unreal-k
Version:             0.1
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

executable unreal-k
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4 && < 5,
    acid-state,
    aeson,
    async,
    bytestring,
    containers                 >= 0.5,
    http-server                >= 1.0.1,
    mtl,
    network,
    safecopy,
    stm                        >= 2.4,
    transformers,
    unix-time,
    url,
    template-haskell           == 2.7.0.0

  ghc-options: -main-is Main
               -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -fno-warn-orphans
               -O2
               -rtsopts
               -threaded
  ghc-prof-options: -Wall
                    -prof
                    -fprof-auto
                    -auto-all
                    -with-rtsopts=-hc

  default-extensions: BangPatterns,
                      DeriveDataTypeable,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell,
                      TypeFamilies,
                      TypeSynonymInstances

test-suite unreal-k-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src test/src
  main-is: TestMain.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4 && < 5,
    acid-state,
    aeson,
    async,
    bytestring,
    containers                 >= 0.5,
    http-server                >= 1.0.1,
    mtl,
    network,
    safecopy,
    stm                        >= 2.4,
    transformers,
    unix-time,
    url,
    test-framework,
    test-framework-quickcheck2,
    test-framework-hunit,
    HUnit,
    QuickCheck,
    template-haskell           == 2.7.0.0

  ghc-options: -main-is TestMain
               -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -fno-warn-orphans

  default-extensions: BangPatterns,
                      DeriveDataTypeable,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell,
                      TypeFamilies,
                      TypeSynonymInstances

benchmark unreal-k-benchmarks
  type: exitcode-stdio-1.0
  hs-source-dirs: src benchmark/src
  main-is: BenchmarkMain.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4 && < 5,
    acid-state,
    aeson,
    async,
    bytestring,
    containers                 >= 0.5,
    http-server                >= 1.0.1,
    mtl,
    network,
    safecopy,
    stm                        >= 2.4,
    transformers,
    unix-time,
    url,
    criterion,
    template-haskell           == 2.7.0.0

  ghc-options: -main-is BenchmarkMain
               -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -fno-warn-orphans

  default-extensions: BangPatterns,
                      DeriveDataTypeable,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      ScopedTypeVariables,
                      TemplateHaskell,
                      TypeFamilies,
                      TypeSynonymInstances